--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Tracker",
+  "name": "tracker",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,12 +10,27 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-firebase/app": "^18.7.3",
+    "@react-native-firebase/auth": "^18.7.3",
+    "@react-native-firebase/firestore": "^18.7.3",
+    "@reduxjs/toolkit": "^2.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.1"
+    "react-native": "0.73.1",
+    "react-native-contacts": "^7.0.8",
+    "react-native-linear-gradient": "^2.8.3",
+    "react-native-vector-icons": "^10.0.3",
+    "react-redux": "^9.0.4",
+    "react-router": "^6.21.1",
+    "react-router-dom": "^6.21.1",
+    "react-router-native": "^6.21.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/eslint-parser": "^7.23.3",
     "@babel/preset-env": "^7.20.0",
+    "@babel/preset-react": "^7.23.3",
     "@babel/runtime": "^7.20.0",
     "@react-native/babel-preset": "^0.73.18",
     "@react-native/eslint-config": "^0.73.1",
@@ -23,6 +38,7 @@
     "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
+    "@types/redux-persist": "^4.3.1",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
